tests/e2e/scarb/snapshots/e2e__scarb__manifest_diagnostics__invalid_manifest_reports_diagnostics.snap
---
source: tests/e2e/scarb/manifest_diagnostics.rs
description: "// → Scarb.toml\n[package]\nname = 1\nversion = \"0.1.0\"\nedition = \"2025_12\"\n\n// → src/lib.cairo\nfn main() {}"
expression: "diagnostics_report(&mut ls, &[\"Scarb.toml\"])"
---
diagnostics:
- url: '[ROOT_URL]Scarb.toml'
  diagnostics:
  - related_code: '1'
    diagnostic:
      range:
        start:
          line: 1
          character: 7
        end:
          line: 1
          character: 8
      severity: 1
      code: SE0001
      source: scarb
      message: |
        TOML parse error at line 2, column 8
          |
        2 | name = 1
          |        ^
        invalid type: integer `1`, expected a string
